--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon -r dotenv/config src/app.js",
+    "dev": "nodemon -r dotenv/config src/app.js",
+    "start": "node -r dotenv/config src/app.js",
     "create-clients-db": "cd src && cd dynamodb && node createClientsTable.js && cd ..",
     "create-users-db": "cd src && cd dynamodb && node createUsersTable.js && cd ..",
     "delete-clients-db": "cd src && cd dynamodb && node deleteCarsTable.js && cd ..",
@@ -19,6 +20,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "google-auth-library": "^6.1.6",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
