--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "node-uuid": "^1.4.8",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
